--- a/composer.json
+++ b/composer.json
@@ -2,10 +2,18 @@
     "name": "nolikein/filemaker",
     "description": "Create files programmativally (as php)",
     "type": "librairy",
+    "minimum-stability": "dev",
     "license": "MIT",
+    "authors": [
+        {
+            "name": "Côme Wasik",
+            "email": "wasik.come@gmail.com",
+            "role": "Developper"
+        }
+    ],
     "autoload": {
         "psr-4": {
-            "Nolikein\\Filemaker\\": "src/"
+            "Nolikein\\FileMaker\\": "src/"
         }
     },
     "autoload-dev": {
@@ -13,12 +21,6 @@
             "Tests\\": "tests/"
         }
     },
-    "authors": [
-        {
-            "name": "Nolikein"
-        }
-    ],
-    "minimum-stability": "dev",
     "require": {},
     "require-dev": {
         "phpunit/phpunit": "^9"
